--- a/src/Jili/ApiBundle/Resources/views/Default/help.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Default/help.html.twig
@@ -275,8 +275,8 @@
                 <p>支付宝名义人是您在注册支付宝时填写的实名。</p>
             </li>
             <li>
-            	<div class="question"><em>17</em><span>支付宝如何手续手续费</span><span class="icons"></span></div>
-                <p>由于支付宝方面大幅提高积分兑换的手续费，积粒网本着用户利益至上，一直以来承担着替用户支付手续费。现积粒网网已经上线积分兑换手机费功能，您依然可以用<strong>2010分兑换成20元手机费</strong>。今后，我们会上线更多兑换的途径，使您有更多的兑换选择。</p>
+            	<div class="question"><em>17</em><span>支付宝如何支付手续费</span><span class="icons"></span></div>
+                <p>由于支付宝方面大幅提高积分兑换的手续费，积粒网本着用户利益至上，一直以来承担着替用户支付手续费。现积粒网已经上线积分兑换手机费功能，您依然可以用<strong>2010分兑换成20元手机费</strong>。今后，我们会上线更多兑换的途径，使您有更多的兑换选择。</p>
             </li>
         	<li>
             	<div class="question"><em>18</em><span>支付宝兑换与手机兑换积分数量</span><span class="icons"></span></div>
@@ -351,12 +351,12 @@
             </li>
             <li>
             	<div class="question"><em>11</em><span>积分失效清零</span><span class="icons"></span></div>
-                <p>通常情况下，连续超过半年未登陆积粒网，积分就会失效。<br/>
+                <p>通常情况下，连续超过180天未在积粒网签到，积分就会失效。<br/>
 您可以提供您的积粒网账号，帮您核查一下，是否有意外情况造成您的积分损失。</p>
             </li>
             <li>
             	<div class="question"><em>12</em><span>有客服电话吗</span><span class="icons"></span></div>
-                <p>很抱歉，目前我们的客服系统只支持网络咨询。如果您有任何意见建议，欢迎发送邮件至客服。我们会尽快为您解答。</p>
+                <p>很抱歉，目前我们的客服系统只支持网络咨询。如果您有任何意见建议，欢迎发送邮件至客服（cs@91jili.com）。我们会尽快为您解答。</p>
             </li>
             <li>
             	<div class="question"><em>13</em><span>网络太慢</span><span class="icons"></span></div>
