[前台] 天芒云体验广告 #578

--- a/src/Jili/ApiBundle/Resources/views/Admin/pointManage.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Admin/pointManage.html.twig
@@ -44,6 +44,7 @@ return false;
 19-cpsemar购物返利&nbsp;&nbsp;&nbsp;
 20-cpaemar亿玛活动&nbsp;&nbsp;&nbsp;
 21-活动送积分&nbsp;&nbsp;&nbsp;
+22-Bangwoya体验广告&nbsp;&nbsp;&nbsp;
 90-手动返还积分</p>
 <p>&nbsp;</p>
 <p>task_type====> category_type</p>
