--- a/src/Jili/ApiBundle/Resources/views/Advertiserment/bangwoya.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Advertiserment/bangwoya.html.twig
@@ -1,5 +1,5 @@
 {% extends 'JiliFrontendBundle::base.html.twig' %}
-{% block title %}任务大厅二{% endblock %}
+{% block title %}任务大厅三{% endblock %}
 
 {% block stylesheet %}
 <link href="{{ asset('css/default.css')}}" rel="stylesheet" type="text/css" />
@@ -7,7 +7,6 @@
 <link href="{{ asset('css/adListNew.css')}}" rel="stylesheet" type="text/css" />
 <link href="{{ asset('css/pageNav.css')}}" rel="stylesheet" type="text/css" />
 {% endblock %}
-
 {% block javascript %}
 <script src="{{ asset('js/jquery-1.7.js')}}" type="text/javascript"></script>
 <script src="{{ asset('js/adListNew.js')}}" type="text/javascript"></script>
@@ -19,13 +18,14 @@
     <div class="offwowSubnav">
         <ul class="subnavList">
             <li class="subnavItem first"><a href="{{ asset(path('_advertiserment_list')) }}">任务大厅一</a></li>
-            <li class="subnavItem"><a class="now" href="{{ asset(path('_advertiserment_offer99')) }}">任务大厅二</a></li>
-            <li class="subnavItem"><a href="{{ asset(path('_advertiserment_bangwoya')) }}">任务大厅三</a></li>
+            <li class="subnavItem"><a href="{{ asset(path('_advertiserment_offer99')) }}">任务大厅二</a></li>
+            <li class="subnavItem"><a class="now" href="{{ asset(path('_advertiserment_bangwoya')) }}">任务大厅三</a></li>
         </ul>
         <div class="navNew"><img src="{{ asset('images/newTag.gif') }}" title="NEW"></div>
     </div>
     <!--  subnav  /-->
-    <iframe src='http://app.offer99.com/index.php?pid={{ offer99_com.pid }}&userid={{ app.session.get('uid') }}' style='width:1000px;height:1140px;' scrolling='auto' frameborder='no' border='0' allowTransparency='true'></iframe>
+    <iframe src='{{ url }}&u={{ app.session.get('uid') }}' style='width:1000px;height:1140px;' scrolling='auto' frameborder='no' border='0' allowTransparency='true'></iframe>
   </article>
 </div>
 {% endblock %}
+ 
