--- a/src/Jili/ApiBundle/Resources/views/Top/myTask.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Top/myTask.html.twig
@@ -50,6 +50,8 @@
                     <a href="{{ path('_advertiserment_list') }}" target="_blank">{{ item.title }}</a>
                   {% elseif item.incentiveType == 18 %}
                     <a href="{{ asset(path('_advertiserment_offer99')) }}" target="_blank">{{ item.title }}</a>
+                  {% elseif item.incentiveType == 22 %}
+                    <a href="{{ asset(path('_advertiserment_bangwoya')) }}" target="_blank">{{ item.title }}</a>
                   {% else %}
                     {{ item.title }}
                   {% endif %}
@@ -78,6 +80,8 @@
                     <a href="{{ path('_advertiserment_list') }}" target="_blank">{{ item.title }}</a>
                   {% elseif item.incentiveType == 18 %}
                     <a href="{{ asset(path('_advertiserment_offer99')) }}" target="_blank">{{ item.title }}</a>
+                  {% elseif item.incentiveType == 22 %}
+                    <a href="{{ asset(path('_advertiserment_bangwoya')) }}" target="_blank">{{ item.title }}</a>
                   {% else %}
                     {{ item.title }}
                   {% endif %}
