--- a/src/Jili/ApiBundle/Resources/views/User/changePwd.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/changePwd.html.twig
@@ -1,25 +1,21 @@
-<!doctype html>
-<html>
-<head>
-<meta charset="UTF-8" />
-<title>积粒网-修改密码</title>
-{% include 'JiliApiBundle::seo.html.twig' %}
-<!-- [if lt IE9] -->
-<script src="{{ asset('js/html5.js')}}" type="text/javascript"></script>
-<!-- [endif] -->
+{% extends 'JiliFrontendBundle::base.html.twig' %}
+{% block title %}积粒网-修改密码{% endblock %}
+
+{% block stylesheet %}
 <link href="{{ asset('css/default.css')}}" rel="stylesheet" type="text/css" />
 <link href="{{ asset('css/password.css')}}" rel="stylesheet" type="text/css" />
-<script src="{{ asset('js/jquery-1.7.js')}}" type="text/javascript"></script>
+{% endblock %}
+
+{% block javascript %}
 <script src="{{ asset('js/banner.js')}}" type="text/javascript"></script>
-</head>
 <script type="text/javascript">
 function check(){
 	$("#form1").submit();
 }
-
 </script>
-<body>
-{% include 'JiliApiBundle::header.html.twig' %}
+{% endblock %}
+
+{% block body %}
 <div class="webArticle password">
   <article>
     <form action="{{ path('_user_changePwd') }}" method="post" name="form1" id="form1" >
@@ -32,12 +28,12 @@ function check(){
         <li>
           <dd>请输入旧密码：</dd>
           {% if codeflag == 2 %}
-                  <dt id="oldPwdError" class="error">
+                  <dt id="oldPwdError" class="pwdError">
                     <input name="oldPwd" id="oldPwd" type="password" class="password"><font>&nbsp;</font>
                      <br />
                     <span>{{ code }}</span></dt>
             {% elseif codeflag == 6  %}
-                    <dt id="oldPwdError" class="error">
+                    <dt id="oldPwdError" class="pwdError">
                     <input name="oldPwd" id="oldPwd" type="password" class="password"><font>&nbsp;</font>
                     <br />
                     <span>{{ code }}</span></dt>
@@ -49,12 +45,12 @@ function check(){
         <li>
           <dd>请输入新密码：</dd>
           {% if codeflag == 3 %}
-          <dt id="pwdError" class="error">
+          <dt id="pwdError" class="pwdError">
             <input name="pwd" id="pwd" type="password" class="password"><font>&nbsp;</font>
             <br />
             <span>{{ code }}</span></dt>
             {% elseif codeflag == 5 %}
-             <dt id="pwdError" class="error">
+             <dt id="pwdError" class="pwdError">
             <input name="pwd" id="pwd" type="password" class="password"><font>&nbsp;</font>
             <br />
             <span>{{ code }}</span></dt>
@@ -67,7 +63,7 @@ function check(){
         <li>
           <dd>请再次输入新密码：</dd>
            {% if codeflag == 4 %}
-          <dt id="newPwdError" class="error">
+          <dt id="newPwdError" class="pwdError">
             <input name="newPwd" id="newPwd" type="password" class="password">
              <br />
             <span>{{ code }}</span></dt>
@@ -79,7 +75,7 @@ function check(){
         </li>
         <li>
           <dd></dd>
-          <dt><a class="saveBtn" href="javascript:void(0);" onclick="check();">保存设置</a> 
+          <dt><a class="saveBtn" href="javascript:void(0);" onClick="check();">保存设置</a> 
           </dt>
         </li>
       </ul>
@@ -88,6 +84,4 @@ function check(){
     </form>
   </article>
 </div>
-{% include 'JiliApiBundle::footer.html.twig' %}
-</body>
-</html>
+{% endblock %}
