--- a/web/css/password.css
+++ b/web/css/password.css
@@ -154,18 +154,18 @@
 	margin: 0 0 0 5px;
 	text-indent: 20px;
 }
-.password article ul li dt.error input.text, .password article ul li dt.error input.password {
+.password article ul li dt.pwdError input.text, .password article ul li dt.pwdError input.password {
 	border: 1px solid #f4784a;
 	margin: 1px;
 }
-.password article ul li dt.error font {
-	background-image: url("../images/errorIcon.jpg");
+.password article ul li dt.pwdError font {
+	background-image: url("../images/pwdErrorIcon.jpg");
 	background-position: 0 12px;
 	background-repeat: no-repeat;
 	margin: 0 0 0 5px;
 	text-indent: 20px;
 }
-.password article ul li dt.error span {
+.password article ul li dt.pwdError span {
 	color: #F00;
 }
 .password article ul li dt .saveBtn {
