--- a/src/Jili/BackendBundle/Resources/views/GameEggsBreaker/TaobaoOrder/edit.html.twig
+++ b/src/Jili/BackendBundle/Resources/views/GameEggsBreaker/TaobaoOrder/edit.html.twig
@@ -6,11 +6,22 @@ Taobao订单审核-12月活动-{{ parent() }}
 
 {% block body %}
 
+{% include("JiliBackendBundle:GameEggsBreaker/TaobaoOrder:filter_menu.html.twig") %}
 
 <form action="{{ path( 'jili_backend_decemberactivity_audit', {'id': id})  }}" method="POST">
 <table align="center">
 
 <tr><td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr><td>用户email&nbsp;</td><td>{{ user.email }}</td></tr>
+
+<tr>
+    <td>{{ form_label(form.createdAt) }}</td>
+    <td>
+    {{ form_errors(form.createdAt) }}
+    {{ form_widget(form.createdAt) }}
+</td>
+</tr>
+
 <tr>
     <td>{{ form_label(form.orderId) }}</td>
     <td>
