--- a/src/Jili/EmarBundle/Resources/views/Search/form.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Search/form.html.twig
@@ -9,7 +9,7 @@
     	<div class="tbTipsWrap">
             <a class="tbTipsIco"></a>
             <div class="tbTipsCon">
-                <em></em>通过这里去淘宝购物最高可获得8888米粒（参加<a href="http://www.91jili.com/activity/december/?l=7" target="_blank">抢金蛋活动</a>，但没有返利）
+                <em></em>通过这里去淘宝购物最高可获得<a>8888</a>米粒（参加<a style="text-decoration:underline;" href="http://www.91jili.com/activity/december/?l=7" target="_blank">抢金蛋活动</a>，但没有返利）
             </div>
     	</div>
     </div>
