[前台] 天芒云体验广告 #578
单体测试及其他修改

--- a/src/Jili/ApiBundle/Resources/views/Advertiserment/bangwoya.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Advertiserment/bangwoya.html.twig
@@ -24,8 +24,7 @@
         <div class="navNew"><img src="{{ asset('images/newTag.gif') }}" title="NEW"></div>
     </div>
     <!--  subnav  /-->
-    <iframe src='{{ url }}&u={{ app.session.get('uid') }}' style='width:1000px;height:1140px;' scrolling='auto' frameborder='no' border='0' allowTransparency='true'></iframe>
+    <iframe src='{{ bangwoya_com.url }}&u={{ app.session.get('uid') }}' style='width:1000px;height:1140px;' scrolling='auto' frameborder='no' border='0' allowTransparency='true'></iframe>
   </article>
 </div>
 {% endblock %}
- 
