--- a/app/Resources/views/menu.html.twig
+++ b/app/Resources/views/menu.html.twig
@@ -150,4 +150,4 @@ $(document).ready(function(){
     	{{ render(controller('JiliApiBundle:Top:checkIn' , {auto_checkin: app.request.get('auto_checkin',0)}) ) }}{# 签到 #}
 	{% endif %}
     <!--end checkin div-->
- 
+ {% include "JiliFrontendBundle::alimama.html.twig" with { pid:"mm_49376465_4372428_28778243" } %}
