justify homepage and subpage

--- a/src/Jili/ApiBundle/Resources/views/Advertiserment/bangwoya.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Advertiserment/bangwoya.html.twig
@@ -18,13 +18,13 @@
     <div class="offwowSubnav">
         <ul class="subnavList">
             <li class="subnavItem first"><a href="{{ asset(path('_advertiserment_list')) }}">任务大厅一</a></li>
-            <li class="subnavItem"><a href="{{ asset(path('_advertiserment_offer99')) }}">任务大厅二</a></li>
+            <li class="subnavItem second"><a href="{{ asset(path('_advertiserment_offer99')) }}">任务大厅二</a></li>
             <li class="subnavItem"><a class="now" href="{{ asset(path('_advertiserment_bangwoya')) }}">任务大厅三</a></li>
         </ul>
         <div class="navNew"><img src="{{ asset('images/newTag.gif') }}" title="NEW"></div>
     </div>
     <!--  subnav  /-->
-    <iframe src='{{ bangwoya_com.url }}&u={{ app.session.get('uid') }}' style='width:1000px;height:1140px;' scrolling='auto' frameborder='no' border='0' allowTransparency='true'></iframe>
+    <iframe src='{{ bangwoya_com.url }}&u={{ app.session.get('uid') }}' style='width:1024px;height:1140px;' scrolling='auto' frameborder='no' border='0' allowTransparency='true'></iframe>
   </article>
 </div>
 {% endblock %}
