--- a/src/Jili/ApiBundle/Resources/views/Advertiserment/offer99.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Advertiserment/offer99.html.twig
@@ -19,7 +19,7 @@
     <div class="offwowSubnav">
         <ul class="subnavList">
             <li class="subnavItem first"><a href="{{ asset(path('_advertiserment_list')) }}">任务大厅一</a></li>
-            <li class="subnavItem"><a class="now" href="{{ asset(path('_advertiserment_offer99')) }}">任务大厅二</a></li>
+            <li class="subnavItem second"><a class="now" href="{{ asset(path('_advertiserment_offer99')) }}">任务大厅二</a></li>
             <li class="subnavItem"><a href="{{ asset(path('_advertiserment_bangwoya')) }}">任务大厅三</a></li>
         </ul>
         <div class="navNew"><img src="{{ asset('images/newTag.gif') }}" title="NEW"></div>
