--- a/web/css/adListNew.css
+++ b/web/css/adListNew.css
@@ -124,7 +124,7 @@ aside.offowAside{
 .offwowSubnav{ width:960px;}
 .offwowSubnav .subnavList{ position:relative; height:40px; line-height:40px; font-size:14px;}
 .offwowSubnav .subnavList .subnavItem{ float:left; padding:0 30px 0 0;}
-.offwowSubnav .subnavList .first a{ border-right:1px solid #ccc; padding-right:30px;}
+.offwowSubnav .subnavList .first a,.offwowSubnav .subnavList .second a{ border-right:1px solid #ccc; padding-right:30px;}
 .offwowSubnav .subnavList a{ color:#333;}
 .offwowSubnav .subnavList a:hover,.offwowSubnav .subnavList a.now{ color:#e94d41;}
-.navNew{ position:absolute; top: -5px; left: 173px; z-index: -1; display: none;}
+.navNew{ position:absolute; top: -8px; left: 313px; z-index: -1;}
