--- a/src/Jili/ApiBundle/Resources/views/Advertiserment/bangwoya.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Advertiserment/bangwoya.html.twig
@@ -8,7 +8,6 @@
 <link href="{{ asset('css/pageNav.css')}}" rel="stylesheet" type="text/css" />
 {% endblock %}
 {% block javascript %}
-<script src="{{ asset('js/jquery-1.7.js')}}" type="text/javascript"></script>
 <script src="{{ asset('js/adListNew.js')}}" type="text/javascript"></script>
 {% endblock %}
 {% block body %}
@@ -24,7 +23,11 @@
         <div class="navNew"><img src="{{ asset('images/newTag.gif') }}" title="NEW"></div>
     </div>
     <!--  subnav  /-->
-    <iframe src='{{ bangwoya_com.url }}&u={{ app.session.get('uid') }}' style='width:1024px;height:1140px;' scrolling='auto' frameborder='no' border='0' allowTransparency='true'></iframe>
+    <iframe src="http://www.bangwoya.com/91jili" style='width:1024px; height:3500px;' scrolling='no' frameborder='no' border='0'></iframe>
+		<script type="text/javascript" src="http://www.bangwoya.com/Public/js/iframeResizer.min.js"></script> 
+		<script type="text/javascript">
+			iFrameResize({enablePublicMethods: true});
+		</script>
   </article>
 </div>
 {% endblock %}
