--- a/src/Jili/ApiBundle/Resources/views/Advertiserment/bangwoya.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Advertiserment/bangwoya.html.twig
@@ -23,8 +23,8 @@
         <div class="navNew"><img src="{{ asset('images/newTag.gif') }}" title="NEW"></div>
     </div>
     <!--  subnav  /-->
-    <iframe src="http://www.bangwoya.com/91jili" style='width:1024px; height:3500px;' scrolling='no' frameborder='no' border='0'></iframe>
-		<script type="text/javascript" src="http://www.bangwoya.com/Public/js/iframeResizer.min.js"></script> 
+    <iframe src='{{ bangwoya_com.url }}&u={{ app.session.get('uid') }}' style='width:1024px; height:3500px;' scrolling='no' frameborder='no' border='0'></iframe>
+		<script type="text/javascript" src="/js/iframeResizer.min.js"></script> 
 		<script type="text/javascript">
 			iFrameResize({enablePublicMethods: true});
 		</script>
