--- a/src/Jili/ApiBundle/Resources/views/Admin/addPointSearch.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Admin/addPointSearch.html.twig
@@ -18,11 +18,15 @@ $(document).ready(function(){
 </HEAD>
 <BODY>
 <p>注：不选择时间，默认取今天的数据</p>
+<p>&nbsp;</p>
+<p>购物返利场合</p>
+<p>status 1：订单开始&nbsp;&nbsp; 2：确认中&nbsp;&nbsp; 3：成功(已完成)&nbsp;&nbsp; 4：失败(已拒绝)</p>
+<p>&nbsp;</p>
 <table align="center" width="">
 <form action="{{ path('_admin_addPointSearch')}}" method="post" id="form1"}} >
 <tr><td colspan="7" align="center">&nbsp;</td></tr>
 <tr><td colspan="7" align="center">
-手动增加积分类型:
+任务类型:
 <select id="category_id" name="category_id">
 <option value="0">请选择</option>
 {% for item in categoryList %}
@@ -44,6 +48,7 @@ email:<input type="text" id="email" name="email" value="{% if email %}{{ email }
             <th>category type</th>
             <th>task type</th>
             <th>time</th>
+            <th>status</th>
         </tr>
         {% if pagination %}
          {% for item in pagination %}
@@ -55,6 +60,7 @@ email:<input type="text" id="email" name="email" value="{% if email %}{{ email }
           <td align="center">{{ item.category_type }}</td>
           <td align="center">{{ item.task_type }}</td>
           <td align="center">{{ item.date }}</td>
+          <td align="center">{{ item.status }}</td>
         </tr>
          {% endfor %}
          {%  endif %}
