--- a/src/Jili/ApiBundle/Resources/views/Admin/menu.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Admin/menu.html.twig
@@ -574,7 +574,11 @@
             </TR>
             <TR height=20>
                 <TD align=middle width=30><IMG height=9 src="{{ asset('images/admin/menu_icon.gif')}}" width=9></TD>
-                <TD><A class=menuChild href="{{ path('_admin_addPointSearch') }}" target=main>增加积分查询</A></TD>
+                <TD><A class=menuChild href="{{ path('_admin_addPointSearch') }}" target=main>任务历史查询</A></TD>
+            </TR>
+            <TR height=20>
+                <TD align=middle width=30><IMG height=9 src="{{ asset('images/admin/menu_icon.gif')}}" width=9></TD>
+                <TD><A class=menuChild href="{{ path('_admin_pointHistorySearch') }}" target=main>积分历史查询</A></TD>
             </TR>
             <TR height=4>
                 <TD colSpan=2></TD>
